# skainet

./: .gitignore  .pre-commit-config.yaml  README.md  changelog.md  pyproject.toml  requirements.txt  setupenv.bat  skainet.spec  todo.txt
.github/workflows/: release.yml
src/skainet/: __main__.py  audio.py  config.ini  config.py  data.py  file.py  image.py  model.py  moderate.py  text.py  utils.py
test/: functional_test.py
