[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "skainet"
version = "0.0.0.dev4"
authors = [
    {name = "Zach Morris", email = "zacharymorr@outlook.com"}
]
requires-python = ">=3.7"
dependencies = [
    "openai==0.27.4",
    "click==8.1.3",
]

[project.scripts]
skai = "skainet.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.isort]
profile = "black"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.0.0"
version_files = [
    "pyproject.toml:^version",
]

tag_format = "v$major.$minor.$patch$prerelease"
bump_message = "release $current_version -> $new_version"

changelog_file = "changelog.md"
changelog_start_rev = "v0.0.0"

style = [
    ["qmark", "fg:#ff9d00 bold"],
    ["question", "bold"],
    ["answer", "fg:#ff9d00 bold"],
    ["pointer", "fg:#ff9d00 bold"],
    ["highlighted", "fg:#ff9d00 bold"],
    ["selected", "fg:#cc5454"],
    ["separator", "fg:#cc5454"],
    ["instruction", ""],
    ["text", ""],
    ["disabled", "fg:#858585 italic"]
]
